--- a/style.css/main.css
+++ b/style.css/main.css
@@ -1,3 +1,30 @@
+/* body */
+body{
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: white;
+  background-color:grey;
+  padding-left: 50px;
+  background: linear-gradient(70deg, rgb(104, 87, 87), white);------------->p agregar gradiete
+
+}
+
+.container{
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+  border: 10px solid gray;
+}
+
+.item{
+background:rgb(104, 87, 87);
+width: 250px;
+height: 250px;
+}
+
+.container:hover .item{
+  transform: translatex(50px);
+}
+
 /* header */
 .header{
   border-bottom: 1px black solid;
