--- a/style.css/main.css
+++ b/style.css/main.css
@@ -1,14 +1,19 @@
+
+.logo{
+  margin-top: 20px;
+}
+
+
 /* body */
 body{
   font-family: Georgia, "Times New Roman", Times, serif;
   color: white;
   background-color:grey;
   padding-left: 50px;
-  background: linear-gradient(70deg, rgb(104, 87, 87), white);------------->p agregar gradiete
-
+  background: linear-gradient(70deg, rgb(104, 87, 87), white);
 }
 
-.container{
+.container {
   width: 250px;
   height: 250px;
   margin: 20px;
