--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,11 +13,11 @@
 @import "./sections/footer";
 
 body {
-  background-color: $color-blanco;
+  background-color: $color-grey;
 }
 
 a {
-  color: $color-azul;
+  color: $color-blanco;
   text-decoration: none;
   transition: all $transition-time;
 
@@ -55,17 +55,17 @@ p {
 }
 
 button {
-  background: $color-rojo;
-  border: solid 1px $color-rojo;
+  background: $color-grey-oscuro;
+  border: solid 1px $color-grey-oscuro;
   border-radius: 2px;
-  color: $color-blanco;
+  color: $color-grey;
   line-height: 35px;
   padding: 0 20px;
   transition: all $transition-time;
 
   &:hover {
-    color: $color-rojo;
-    background-color: $color-blanco;
+    color: $color-grey-oscuro;
+    background-color: $color-grey;
   }
 }
 
@@ -89,7 +89,7 @@ main {
   background-color: green;
   width: 35px;
   height: 35px;
-  color: $color-blanco;
+  color: $color-grey;
   font-size: 24px;
   border-radius: 50%;
   text-align: center;
@@ -104,7 +104,7 @@ main {
 
     i {
       line-height: 41px;
-      color: $color-blanco;
+      color: $color-grey;
     }
   }
 
@@ -169,7 +169,7 @@ form {
 
 .navbar-light .navbar-nav {
   .nav-link {
-    color: $color-azul;
+    color: $color-blanco;
 
     &:hover {
       color: $color-azul-claro;
@@ -179,7 +179,7 @@ form {
   .nav-link.active,
   .show > .nav-link {
     text-decoration: underline;
-    color: $color-azul;
+    color: $color-blanco;
   }
 }
 
