--- a/scss/variables/_global.scss
+++ b/scss/variables/_global.scss
@@ -1,10 +1,9 @@
 /* Colours */
 
-$color-azul: #373B8C;
+$color-blanco: #f2f2f2;
 $color-azul-claro : #676bb9;
-$color-rojo: #BF2626;
-$color-rojo-claro: #d94646;
-$color-blanco: #F2F2F2;
+$color-grey-oscuro: #7e7e7b;
+$color-grey: #b8b7a6;
 
 /* Transitions */
 
