--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body {
 
 /* Strategy: mobile last */
 body {
-  background-color: #F2F2F2; }
+  background-color: #b8b7a6; }
 
 a {
-  color: #373B8C;
+  color: #f2f2f2;
   text-decoration: none;
   transition: all 300ms; }
   a:hover {
@@ -67,16 +67,16 @@ p {
   margin: 0; }
 
 button {
-  background: #BF2626;
-  border: solid 1px #BF2626;
+  background: #7e7e7b;
+  border: solid 1px #7e7e7b;
   border-radius: 2px;
-  color: #F2F2F2;
+  color: #b8b7a6;
   line-height: 35px;
   padding: 0 20px;
   transition: all 300ms; }
   button:hover {
-    color: #BF2626;
-    background-color: #F2F2F2; }
+    color: #7e7e7b;
+    background-color: #b8b7a6; }
 
 .page-layout {
   display: grid;
@@ -94,7 +94,7 @@ main {
   background-color: green;
   width: 35px;
   height: 35px;
-  color: #F2F2F2;
+  color: #b8b7a6;
   font-size: 24px;
   border-radius: 50%;
   text-align: center;
@@ -107,7 +107,7 @@ main {
     bottom: 67px; }
     .fixed-btn:hover i {
       line-height: 41px;
-      color: #F2F2F2; }
+      color: #b8b7a6; }
   .fixed-btn i {
     line-height: 35px; }
 
@@ -148,14 +148,14 @@ form {
 
 /* Bootstrap sobre-escritura */
 .navbar-light .navbar-nav .nav-link {
-  color: #373B8C; }
+  color: #f2f2f2; }
   .navbar-light .navbar-nav .nav-link:hover {
     color: #676bb9; }
 
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show > .nav-link {
   text-decoration: underline;
-  color: #373B8C; }
+  color: #f2f2f2; }
 
 .carousel-control-next:focus, .carousel-control-next:hover,
 .carousel-control-prev:focus,
@@ -175,18 +175,18 @@ form {
     padding-left: 0.7rem; } }
 
 header {
-  border-bottom: solid 3px #373B8C;
+  border-bottom: solid 3px #f2f2f2;
   grid-area: header; }
 
 .preheader {
-  background-color: #BF2626;
-  color: #F2F2F2; }
+  background-color: #7e7e7b;
+  color: #b8b7a6; }
   .preheader strong {
     margin-right: 3px; }
   .preheader p,
   .preheader i,
   .preheader a {
-    color: #F2F2F2;
+    color: #b8b7a6;
     display: inline-block; }
   .preheader ul li {
     display: inline-block;
@@ -207,7 +207,7 @@ header {
 
 @media (max-width: 767px) {
   header {
-    border-top: solid 3px #BF2626; } }
+    border-top: solid 3px #7e7e7b; } }
 
 /* Nosotros */
 .nosotros h3 {
@@ -225,14 +225,14 @@ iframe.mapa {
   width: 100%; }
 
 footer {
-  border-top: solid 3px #373B8C;
+  border-top: solid 3px #f2f2f2;
   padding: 20px 20px 0;
   grid-area: footer; }
   footer .logo a img {
     width: 75px;
     height: auto; }
   footer .links ul li a {
-    color: #373B8C;
+    color: #f2f2f2;
     font-weight: bold;
     margin-bottom: 10px;
     display: block; }
@@ -244,7 +244,7 @@ footer {
       margin-right: 3px; }
     footer .contact ul li p {
       display: inline-block;
-      color: #373B8C; }
+      color: #f2f2f2; }
   footer .socials ul li a {
     font-size: 25px; }
 
@@ -254,14 +254,14 @@ footer {
   font-weight: normal;
   text-decoration: none;
   text-transform: none;
-  background-color: #d94646;
-  color: #F2F2F2; }
+  background-color: #7e7e7b;
+  color: #b8b7a6; }
 
 body {
-  background-color: #F2F2F2; }
+  background-color: #b8b7a6; }
 
 a {
-  color: #373B8C;
+  color: #f2f2f2;
   text-decoration: none;
   transition: all 300ms; }
   a:hover {
@@ -306,16 +306,16 @@ p {
   margin: 0; }
 
 button {
-  background: #BF2626;
-  border: solid 1px #BF2626;
+  background: #7e7e7b;
+  border: solid 1px #7e7e7b;
   border-radius: 2px;
-  color: #F2F2F2;
+  color: #b8b7a6;
   line-height: 35px;
   padding: 0 20px;
   transition: all 300ms; }
   button:hover {
-    color: #BF2626;
-    background-color: #F2F2F2; }
+    color: #7e7e7b;
+    background-color: #b8b7a6; }
 
 .page-layout {
   display: grid;
@@ -333,7 +333,7 @@ main {
   background-color: green;
   width: 35px;
   height: 35px;
-  color: #F2F2F2;
+  color: #b8b7a6;
   font-size: 24px;
   border-radius: 50%;
   text-align: center;
@@ -346,7 +346,7 @@ main {
     bottom: 67px; }
     .fixed-btn:hover i {
       line-height: 41px;
-      color: #F2F2F2; }
+      color: #b8b7a6; }
   .fixed-btn i {
     line-height: 35px; }
 
@@ -387,14 +387,14 @@ form {
 
 /* Bootstrap sobre-escritura */
 .navbar-light .navbar-nav .nav-link {
-  color: #373B8C; }
+  color: #f2f2f2; }
   .navbar-light .navbar-nav .nav-link:hover {
     color: #676bb9; }
 
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show > .nav-link {
   text-decoration: underline;
-  color: #373B8C; }
+  color: #f2f2f2; }
 
 .carousel-control-next:focus, .carousel-control-next:hover,
 .carousel-control-prev:focus,
