--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    border-top: solid 3px $color-azul;
+    border-top: solid 3px $color-blanco;
     padding: 20px 20px 0;
     grid-area: footer;
   
@@ -9,7 +9,7 @@ footer {
     }
   
     .links ul li a {
-      color: $color-azul;
+      color: $color-blanco;
       font-weight: bold;
       margin-bottom: 10px;
       display: block;
@@ -28,7 +28,7 @@ footer {
   
       p {
         display: inline-block;
-        color: $color-azul;
+        color: $color-blanco;
       }
     }
   
@@ -39,6 +39,6 @@ footer {
   
   .copyrigth {
     @include fontstyle(10px, 28px);
-    background-color: $color-rojo-claro;
-    color: $color-blanco;
+    background-color: $color-grey-oscuro;
+    color: $color-grey;
   }
