--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,11 +1,11 @@
 header {
-    border-bottom: solid 3px $color-azul;
+    border-bottom: solid 3px $color-blanco;
     grid-area: header;
   }
   
   .preheader {
-    background-color: $color-rojo;
-    color: $color-blanco;
+    background-color: $color-grey-oscuro;
+    color: $color-grey;
   
     strong {
       margin-right: 3px;
@@ -14,7 +14,7 @@ header {
     p,
     i,
     a {
-      color: $color-blanco;
+      color: $color-grey;
       display: inline-block;
     }
   
@@ -44,7 +44,7 @@ header {
   
   @media (max-width: 767px) {
     header {
-      border-top: solid 3px $color-rojo;
+      border-top: solid 3px $color-grey-oscuro;
     }
   }
   
